fixed top section spacing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ h5 {
   font-weight: 100;
   line-height: 1em;
   letter-spacing: 0.4em;
-  color: #1d6152;
+  color: black;
   background-color: #fff;
   display: center;
   margin-top: -0.7em;
